2011-03-29  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Enable BatchMode in ssh during rsync.

2011-03-28  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Add support for specifying an arbitrary
	port for synchronization.

2011-03-28  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Add support for reading configuration from
	$sysconfdir/openvas/greenbone-nvt-sync.conf.

2011-03-28  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Add support for reading feed information
	from the plugin_feed_info.inc. Rename FEED_PROVIDER to FEED_VENDOR for
	consistency.

2011-03-28  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-nvt-sync.in: Make indentation consistent, flush
	trailing spaces.

2011-03-25  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-nvt-sync.in: Add support for reading feed information
	from the plugin_feed_info.inc. Rename FEED_PROVIDER to FEED_VENDOR
	for consistency.

2011-03-16  Henri Doreau <henri.doreau@greenbone.net>

	* src/locks.c (file_lock): fixed coding style mismatch from previous
	commit.

2011-03-16  Henri Doreau <henri.doreau@greenbone.net>

	* src/locks.c (file_lock, file_locked): Close file descriptors before
	return.

	* src/save_kb.c (save_kb_load_kb): Close stream before return.

2011-03-10  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/greenbone-nvt-sync: Fix conditionals so that they are
	evaluated as intended.

2011-03-07  Michael Wiegand <michael.wiegand@greenbone.net>

	* tools/openvas-nvt-sync.in: Removed last bashism from
	openvas-nvt-sync a second time: Drop SIG prefix when referring to
	signal as it is a bashism as well.

2011-03-04  Michael Wiegand <michael.wiegand@greenbone.net>

	* CMakeLists.txt: Ensure that a "gnupg" directory is created in the
	OpenVAS configuration directory with the correct permissions as a
	preparation for signature verifications.
